# exasol-gateway-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml  release.yml
abi/: sessiongw_c_symbols.txt
cmake/: SessionGatewaySdkConfig.cmake.in
docs/: arrow_mapping.md  branding.md  protocol_v1.md  releasing.md  sdk.md
examples/: public_consumer.cpp
include/sessiongw/: c_api.h  capabilities.hpp  client.hpp  errors.hpp  frame.hpp  native_read_batch.hpp  native_write_batch.hpp  session.hpp  sessiongw.hpp  upgrade.hpp  websocket.hpp
src/: c_api.cpp  capabilities.cpp  client.cpp  errors.cpp  frame.cpp  native_write_batch.cpp  session.cpp  websocket.cpp
test/: c_api_utest.cpp  frame_utest.cpp  native_write_batch_utest.cpp  public_api_utest.cpp
test/consumer/: CMakeLists.txt  consumer.c  consumer.cpp
test/integration/: sessiongw_sdk_integration_test.cpp
tools/: sessiongw_sim_client.cpp
